
11. Fix: set_input added to the help index.

12. Fix: with separate added to help command.

13. Change: make coverage regression and coverage tests now support Jenkins using JUnit/Cobetura.

14. New: user types and subtypes can be declared abstract.  [TODO: check parameters, negative tests, and docs.]

15. New: scalar variables can be declared limited.  [TODO: check parameters, negative tests - arrays, records, which can't be assigned yet].  This isn't that useful until packages or some other context is defined where it can be assigned.]

16. Fix: passing a record to an array index no longer results in an exception crash.

17. New: gprof profiling enabled on make coverage

18. Fix: rounding errors in calendar.time arithmetic fixed.

19. Fix: functions many no longer be called in static expressions (since they use regular expressions, not static ones).

20. Refactor: expression handling redesigned to get some minor speed improvements.

21. Fix: passing a record to an array index in an anonymous array longer results in an exception crash.

23. Fix: PWD's value is set when SparForte starts and no longer shows the PWD value imported from the environment, which could possibly be incorrect.

24. New: changes to provision and configure scripts for Debian.

25. Change: whitespace at end of line no longer an error in maintenance phase.

26. Fix: constraint error caught when setting values too large in btree_io and hash_io.

27. Fix: formal parmeters of procedures and functions no longer clash with pre-existing identifiers of the same name.

28. Fix: arrays.shuffle rare constraint error (should be) fixed.

29. Fix: last in chain internal identifier no longer shows a "should be constant" error in test phase mode.

30. Fix: scalar user types no longer incorrectly treated as subtypes during syntax check.

31. New: abstract enforced for un-applied types in design and test modes.
