@@ -54,7 +54,7 @@ environment.</p>
   <b>pragma</b> advise( from, message )
   <b>pragma</b> annotate( [type,]"text" )
   <b>pragma</b> assert( condition )
-  <b>pragma</b> assumption( used | written, var )
+  <b>pragma</b> assumption( applied | used | written, var )
   <b>pragma</b> clarify( from, message )
   <b>pragma</b> debug( `commands` )
   <b>pragma</b> depreciated/deprecated( "newscript" )
@@ -302,6 +302,9 @@ suppress certain error messages.</p>
 If it isn't true, the program stops and "assertion failed" is displayed.
 Use this to check the expected results during development.
 Requires --debug or --test options or asserts will have no effect.</li>
+  <li> <b>pragma assumption( applied, var )</b> - assume a concrete type
+was used, even if it isn't, for abstract type errors.  This is to be used
+as a work-around if the language makes a mistake.</li>
   <li> <b>pragma assumption( used, var )</b> - assume a variable is
 used in the source code, even if it isn't, for unused variable
 errors.  This is to be used as a work-around if the language makes a
