@@ -3072,6 +3072,7 @@ begin
   declareNamespace( "mysqlm" );
   declareIdent( mysqlm_connection_t, "mysqlm.connection",
     positive_t, typeClass );
+  identifiers( mysqlm_connection_t ).limit := true;
 
   declareIdent( mysqlm_query_t, "mysqlm.query",
     positive_t, typeClass );
