@@ -1,0 +1,6 @@
+# This should fail
+
+type t is new limited integer;
+a : limited t := 1; -- double limited
+
+
